# hyperlight

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  Justfile  MAINTAINERS.md  NOTICE.txt  README.md  SECURITY.md  SUPPORT.md  c.just  flake.nix  rust-toolchain.toml  rustfmt.toml  typos.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: guest_call.rs  host_call.rs  host_print.rs
src/hyperlight_common/: Cargo.toml
src/hyperlight_common/src/: clippy.toml  layout.rs  lib.rs  log_level.rs  mem.rs  outb.rs  resource.rs  time.rs  version_note.rs  vmem.rs
src/hyperlight_common/src/flatbuffer_wrappers/: function_call.rs  function_types.rs  guest_error.rs  guest_log_data.rs  guest_log_level.rs  guest_trace_data.rs  host_function_definition.rs  host_function_details.rs  hyperlight_fs.rs  mod.rs  util.rs
src/hyperlight_common/src/flatbuffers/: mod.rs
src/hyperlight_common/src/mem/: mod.rs
src/hyperlight_common/src/wrappers/: mod.rs  windows_wrappers.rs
src/hyperlight_component_macro/: Cargo.toml
src/hyperlight_component_macro/src/: lib.rs
src/hyperlight_component_util/: Cargo.toml
src/hyperlight_component_util/src/: component.rs  elaborate.rs  emit.rs  etypes.rs  guest.rs  hl.rs  host.rs  lib.rs  resource.rs  rtypes.rs  structure.rs  substitute.rs  subtype.rs  tv.rs  util.rs  wf.rs
src/hyperlight_error/: Cargo.toml  build.rs
src/hyperlight_error/src/: error.rs  lib.rs
src/hyperlight_guest/: Cargo.toml  build.rs
src/hyperlight_guest/include/: setjmp.h
src/hyperlight_guest/src/: alloca.rs  chkstk.rs  entrypoint.rs  error.rs  exit.rs  gdt.rs  guest_error.rs  guest_function_call.rs  guest_function_definition.rs  guest_function_register.rs  guest_logger.rs  host_error.rs  host_function_call.rs  host_functions.rs  idt.rs  idtr.rs  interrupt_entry.rs  interrupt_handlers.rs  layout.rs  lib.rs  logging.rs  memory.rs  prim_alloc.rs  print.rs  security_check.rs  setjmp.rs  shared_input_data.rs  shared_output_data.rs  time.rs
src/hyperlight_guest/src/alloca/: alloca.c
src/hyperlight_guest/src/exceptions/: gdt.rs  handlers.rs  idt.rs  idtr.rs  interrupt_entry.rs
src/hyperlight_guest/src/fs/: dynamic_fat.rs  error.rs  fat_backend.rs  fd.rs  file.rs  manifest.rs  mod.rs  tests.rs  vfs.rs
src/hyperlight_guest/src/guest_handle/: handle.rs  host_comm.rs  io.rs
src/hyperlight_guest_bin/: Cargo.toml  build.rs  build_files.rs
src/hyperlight_guest_bin/include/: picolibc.h
src/hyperlight_guest_bin/src/: guest_err.rs  guest_logger.rs  host_comm.rs  lib.rs  libc.rs  memory.rs  paging.rs  sleep.rs  time.rs
src/hyperlight_guest_bin/src/exceptions/: gdt.rs  handler.rs  idt.rs  idtr.rs  interrupt_entry.rs
src/hyperlight_guest_bin/src/guest_function/: call.rs  definition.rs  register.rs
src/hyperlight_guest_capi/: Cargo.toml  README.md  build.rs  cbindgen.toml
src/hyperlight_guest_capi/.cargo/: config.toml
src/hyperlight_guest_capi/include/: macro.h
src/hyperlight_guest_capi/src/: dispatch.rs  error.rs  flatbuffer.rs  fs.rs  lib.rs  logging.rs  types.rs
src/hyperlight_guest_capi/src/types/: function_call.rs  parameter.rs  vec.rs
src/hyperlight_guest_macro/: Cargo.toml
src/hyperlight_guest_tracing/: Cargo.toml
src/hyperlight_guest_tracing/src/: lib.rs  state.rs  subscriber.rs
src/hyperlight_guest_tracing_macro/: Cargo.toml
src/hyperlight_guest_tracing_macro/src/: lib.rs
src/hyperlight_host/: Cargo.toml  Justfile  build.rs
src/hyperlight_host/benches/: benchmarks.rs
src/hyperlight_host/examples/: hyperlight_fs_demo.rs  hyperlight_fs_stress.rs  hyperlight_fs_validate.rs
src/hyperlight_host/examples/assets/: hyperlight-fs-example.toml  test_fat.img
src/hyperlight_host/examples/chrome-tracing/: main.rs
src/hyperlight_host/examples/crashdump/: main.rs
src/hyperlight_host/examples/func_ctx/: main.rs
src/hyperlight_host/examples/guest-debugging/: main.rs
src/hyperlight_host/examples/hello-world/: main.rs
src/hyperlight_host/examples/large_host/: main.rs
src/hyperlight_host/examples/logging/: main.rs
src/hyperlight_host/examples/map-file-cow-test/: main.rs
src/hyperlight_host/examples/mesh/: main.rs
src/hyperlight_host/examples/metrics/: main.rs
src/hyperlight_host/examples/otlp_tracing/: main.rs
src/hyperlight_host/examples/tracing/: main.rs
src/hyperlight_host/examples/tracing-chrome/: README.md  main.rs
src/hyperlight_host/examples/tracing-otlp/: main.rs
src/hyperlight_host/examples/tracing-tracy/: README.md  main.rs
src/hyperlight_host/fuzz/: Cargo.toml  README.md
src/hyperlight_host/fuzz/fuzz_targets/: fuzz_target_1.rs
src/hyperlight_host/scripts/: apply-kvm-perf-mitigation.sh  create-fat32-image.sh  inspect-fat32-image.sh
src/hyperlight_host/src/: error.rs  lib.rs
src/hyperlight_host/src/func/: call_ctx.rs  guest_dispatch.rs  guest_err.rs  host_functions.rs  mod.rs  param_type.rs  ret_type.rs  utils.rs
src/hyperlight_host/src/hyperlight_fs/: builder.rs  config.rs  fat_image.rs  image.rs  mod.rs
src/hyperlight_host/src/hyperlight_surrogate/: Cargo.toml_temp_name
src/hyperlight_host/src/hypervisor/: crashdump.rs  dump_on_crash.rs  fpu.rs  handlers.rs  hyperlight_vm.rs  hyperv_linux.rs  hyperv_windows.rs  hypervisor_handler.rs  inprocess.rs  kvm.rs  metrics.rs  mod.rs  surrogate_process.rs  surrogate_process_manager.rs  windows_hypervisor_platform.rs  wrappers.rs
src/hyperlight_host/src/mem/: bitmap.rs  custom_drop.rs  elf.rs  exe.rs  layout.rs  loaded_lib.rs  memory_region.rs  mgr.rs  mod.rs  ptr.rs  ptr_offset.rs  (+4 more)
src/hyperlight_host/tests/: guest_clock_test.rs  hyperlight_fs_test.rs  integration_test.rs  sandbox_host_tests.rs  wit_test.rs
src/hyperlight_mesh/: Cargo.toml
src/hyperlight_mesh/benches/: benchmarks.rs
src/hyperlight_mesh/mesh_host/: Cargo.toml
src/hyperlight_mesh/src/: host_functions.rs  lib.rs  mesh_host_function_registry.rs  mesh_sandbox.rs  mesh_sandbox_builder.rs  sandbox_mesh.rs  sandbox_worker.rs
src/hyperlight_testing/: Cargo.toml
src/hyperlight_testing/src/: lib.rs  logger.rs  simplelogger.rs  tracing_subscriber.rs
(+209 files in other folders)
