[workspace]
resolver = "2"
default-members = [
    "src/hyperlight_common",
    "src/hyperlight_host",
    "src/hyperlight_testing",
]
members = [
    "src/hyperlight_common",
    "src/hyperlight_guest",
    "src/hyperlight_host",
    "src/hyperlight_guest_capi",
    "src/hyperlight_testing",
    "fuzz",
    "src/hyperlight_guest_bin",
    "src/hyperlight_component_util",
    "src/hyperlight_component_macro",
]
# Guests have custom linker flags, so we need to exclude them from the workspace
exclude = [
    "src/tests/rust_guests/callbackguest",
    "src/tests/rust_guests/dummyguest",
    "src/tests/rust_guests/simpleguest",
    "src/tests/rust_guests/witguest",
]

[workspace.package]
version = "0.6.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
homepage = "https://github.com/hyperlight-dev/hyperlight"
repository = "https://github.com/hyperlight-dev/hyperlight"
readme = "README.md"

[workspace.dependencies]
hyperlight-common = { path = "src/hyperlight_common", version = "0.6.1", default-features = false }
hyperlight-host = { path = "src/hyperlight_host", version = "0.6.1", default-features = false }
hyperlight-guest = { path = "src/hyperlight_guest", version = "0.6.1", default-features = false }
hyperlight-guest-bin = { path = "src/hyperlight_guest_bin", version = "0.6.1", default-features = false }
hyperlight-testing = { path = "src/hyperlight_testing", default-features = false }
hyperlight-component-util = { path = "src/hyperlight_component_util", version = "0.6.1", default-features = false }
hyperlight-component-macro = { path = "src/hyperlight_component_macro", version = "0.6.1", default-features = false }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

# this will generate symbols for release builds
# so is handy for debugging issues in release builds
# to use, run `cargo build --profile=release-with-debug`
[profile.release-with-debug]
inherits = "release"
debug = true
