[package]
name = "hyperlight-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = """
Hyperlight's components common to host and guest.
"""

[lints]
workspace = true

[dependencies]
flatbuffers = { version = "25.2.10", default-features = false }
anyhow = { version = "1.0.96", default-features = false }
log = "0.4.25"
tracing = { version = "0.1.41", optional = true }
strum = {version = "0.27",  default-features = false, features = ["derive"]}

[features]
default = ["tracing"]

[dev-dependencies]
hyperlight-testing = { workspace = true }

[lib]
bench = false # see https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
