[package]
name = "hyperlight-guest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = """
Provides only the essential building blocks for interacting with the host environment, including the VM exit mechanism, abstractions for calling host functions and receiving return values, and the input/output stacks used for guest-host communication.
"""

[dependencies]
anyhow = { version = "1.0.100", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hyperlight-common = { workspace = true, default-features = false }
flatbuffers = { version= "25.12.19", default-features = false }
tracing = { version = "0.1.44", default-features = false, features = ["attributes"] }
embedded-io = { version = "0.7", default-features = false }
fatfs = { git = "https://github.com/rafalh/rust-fatfs", rev = "4eccb50d011146fbed20e133d33b22f3c27292e7", default-features = false, features = ["alloc"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
hyperlight-guest-tracing = { workspace = true, default-features = false, optional = true }

[features]
default = []
trace_guest = ["dep:hyperlight-guest-tracing", "hyperlight-guest-tracing?/trace"]
