[package]
name = "hyperlight-guest-bin"
links = "c"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = """
This crate provides the opinionated bits of the guest library, such as the panic handler, the entry point, the guest logger, the exception handling logic, 
and third-party code used by our C-API needed to build a native hyperlight-guest binary.
"""

[features]
default = ["libc", "printf"]
libc = [] # compile musl libc
printf = [] # compile printf

[dependencies]
hyperlight-guest = { workspace = true, default-features = false }
hyperlight-common = { workspace = true, default-features = false }
buddy_system_allocator = "0.11.0"
log = { version = "0.4", default-features = false }
spin = "0.10.0"

[lints]
workspace = true

[build-dependencies]
cc = "1.2"
cfg-if = "1.0"
glob = "0.3.2"
