[package]
name = "hyperlight-guest-bin"
links = "c"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = """
This crate provides the opinionated bits of the guest library, such as the panic handler, the entry point, the guest logger, the exception handling logic, 
and third-party code used by our C-API needed to build a native hyperlight-guest binary.
"""

[features]
default = ["libc", "printf", "macros"]
libc = [] # compile musl libc
printf = [ "libc" ] # compile printf
trace_guest = ["hyperlight-common/trace_guest", "hyperlight-guest/trace_guest", "hyperlight-guest-tracing/trace"]
mem_profile = ["hyperlight-common/mem_profile"]
macros = ["dep:hyperlight-guest-macro", "dep:linkme"]

[dependencies]
hyperlight-guest = { workspace = true, default-features = false }
hyperlight-common = { workspace = true, default-features = false }
hyperlight-guest-tracing = { workspace = true, default-features = false }
hyperlight-guest-macro = { workspace = true, default-features = false, optional = true }
buddy_system_allocator = "0.12.0"
log = { version = "0.4", default-features = false }
linkme = { version = "0.3.35", optional = true }
spin = "0.10.0"
flatbuffers = { version = "25.12.19", default-features = false }
tracing = { version = "0.1.44", default-features = false, features = ["attributes"] }

[lints]
workspace = true

[build-dependencies]
cc = "1.2"
cfg-if = "1.0"
glob = "0.3.3"
