[package]
name = "hyperlight_guest_capi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude = ["/include"]

[lib]
crate-type = ["staticlib"]

[lints]
workspace = true

[dependencies]
hyperlight-guest = { workspace = true, default-features = true }
hyperlight-common = { workspace = true, default-features = false }
log = { version = "0.4", default-features = false }

[build-dependencies]
cbindgen = "0.29.0"
