[package]
name = "hyperlight-guest-tracing-macro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = """Provides the tracing macros for the hyperlight guest, enabling structured logging and tracing capabilities."""

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.40"
syn = { version = "2.0.106", features = ["full"] }

[features]
default = []
trace = []

[lib]
proc-macro = true

[lints]
workspace = true
