[package]
name = "hyperlight-testing"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = "1.0.72"
hex-literal = "0.4"
log = "0.4"
once_cell = "1.19"
tracing = { version = "0.1.37", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = {version = "0.3.3", features = ["std", "env-filter"]}
tracing-core = "0.1.17"
tracing-serde = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
bench = false # see https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
