[package]
name = "hyperlight-testing"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
log = "0.4"
once_cell = "1.19"
tracing = { version = "0.1.41", features = ["log"] }
tracing-log = "0.2.0"
tracing-core = "0.1.33"
tracing-serde = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
bench = false # see https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
